* Modified MailUtil -- added send_bcc command to provide for sending messages with bcc field populated.
* Added AverageInsertSize and CaptureLibDesign field functionality when submitting an experiment.
* Now allow searching of Annotations by property name in advanced search.
* Only allow alphanumeric characters and space in Lab name in Create New Account


5.3.9 (3/12/2012)
--------------------
* The Data Tracks feature is now available in GNomEx.  All GenoPub data tracks have been migrated over. The Data Tracks view allows genome data track files to be annotated and distributed for the purpose of genome browsing in a visualization app like IGB.
* Analysis now has annotations.
* Analysis annotations are searched on full text search.
* When changing to the non-edit view, the dirty flag for analysis is now reset.
* An error used to occur when trying to rename an option in the Property edit screen.  This has been fixed.
* The object which a property applies to is now required before saving the property.
* When a new property is added, the edit screen for the new property now appears automatically.
* The list of properties shown in the property edit screen can now be filtered by object.
* When a new property is added the object the property applies to is defaulted to the current filter(s).
* In Advance Search, when a Experiment Only or Analysis Only warning was given scrollbars would appear.  This has been fixed.
* The user now has the ability to shrink or expand the Advanced Search window in Result View to allow viewing of the underlying screen.
* Properties are excluded from the Annotation view in Data Track if they have no data and are marked inactive.
* Properties are excluded from the Annotation view in Experiment edit if they have no data and are marked inactive.
* Continued bug fixes/refinements for Data Track feature, focusing on linking analysis files to data tracks.
* Fixed scroll bug in Submit Request (and Add Services) for cy3/cy5 label buttons.
