@@ -9,6 +9,7 @@
 * Added AverageInsertSize and CaptureLibDesign field functionality when submitting an experiment.
 * Now allow searching of Annotations by property name in advanced search.
 * Only allow alphanumeric characters and space in Lab name in Create New Account
+* Add validation on email address in Create New Account
 
 
 5.3.9 (3/12/2012)
